--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-before_install: sudo apt-get install libzmq-dev
+before_install: sudo apt-get install libzmq3-dev
 script: bundle exec rspec
 language: ruby
 rvm:
