--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ before_install: sudo apt-get install libzmq3-dev
 script: bundle exec rspec
 language: ruby
 rvm:
-  - 1.9.3
-  - 2.0.0
+  - 2.1
+  - 2.2
   - ruby-head
-  - jruby-19mode
+  - jruby
   - jruby-head
   - rbx-2
 
