--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
-before_install: sudo apt-get install libzmq-dev
+before_install: 
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libzmq-dev
 script: bundle exec rspec
 language: ruby
 rvm:
