--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 before_install: 
   - sudo apt-get -qq update
-  - sudo apt-get install -y libzmq-dev
+  - sudo apt-get install -y libzmq5-dev
+install:
+  - bundle install
 script: bundle exec rspec
 language: ruby
 rvm:
