--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 before_install: 
   - sudo apt-get -qq update
-  - sudo apt-get install -y libzmq5-dev
+  - sudo apt-get install -y libzmq5
 install:
   - bundle install
 script: bundle exec rspec
